# MyOpenCVDemo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/keystore/: test.jks
app/src/androidTest/java/personal/nfl/opencv/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  DetectionBasedTracker_jni.cpp  jni_part.cpp  native-lib.cpp  opencv_helper.cpp  personal_nfl_opencv_demo_util_DetectionBasedTracker.h  personal_nfl_opencv_demo_util_OpenCVHelper.h
app/src/main/java/personal/nfl/opencv/demo/: MainActivity.java
app/src/main/java/personal/nfl/opencv/demo/activity/: CameraCalibrationActivity.java  CameraControlActivity.java  CameraPreviewActivity.java  ColorBlobDetectionActivity.java  FaceDetectActivity.java  FrequencyDomainWatermarkingActivity.java  Image2GreyActivity.java  ImageManipulationsActivity.java  MixedProcessingActivity.java  Puzzle15Activity.java
app/src/main/java/personal/nfl/opencv/demo/util/: CalibrationResult.java  CameraCalibrator.java  ColorBlobDetector.java  DetectionBasedTracker.java  FrequencyDomainWatermarkingUtil.java  OnCameraFrameRender.java  OpenCVHelper.java  Puzzle15Processor.java
app/src/main/java/personal/nfl/opencv/demo/widget/: CameraControlView.java
app/src/main/res/layout/: activity_camera_control.xml  activity_color_blob_detection.xml  activity_frequency_domain_watermarking.xml  activity_image2_grey.xml  activity_puzzle15.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/personal/nfl/opencv/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native/: OpenCVConfig.cmake  android.toolchain.cmake
opencvlibrary/: build.gradle  readme.md
opencvlibrary/src/androidTest/java/demo/opencv/nfl/personal/opencvlibrary/: ExampleInstrumentedTest.java
opencvlibrary/src/main/: AndroidManifest.xml
opencvlibrary/src/main/java/org/opencv/imgproc/: Imgproc.java
opencvlibrary/src/main/res/values/: strings.xml
opencvlibrary/src/test/java/demo/opencv/nfl/personal/opencvlibrary/: ExampleUnitTest.java
